# Pacinspect

./: Cargo.toml  README.md  RELEASING.md  release-to-aur.sh  release.sh
.github/scripts/: release_version.py  test_release_version.py
.github/workflows/: release.yml
.omp/: ssh.json
packaging/aur/: .SRCINFO  PKGBUILD
src/: config.rs  inspect.rs  integration.rs  main.rs  openai.rs  report.rs  ui.rs
