[package]
name = "pacinspect"
version = "1.0.0"
edition = "2024"
description = "AI-assisted security review for AUR PKGBUILDs before yay builds them"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
console = "0.16"
dialoguer = { version = "0.12", default-features = false, features = ["password"] }
directories = "6.0"
fs2 = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
tempfile = "3.20"
toml = "0.9"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
